# mesh2glb

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _config.yml  embuild.sh  index.html
.github/workflows/: cmake.yml
include/: mesh2glb.h
src/: bind.cpp  mesh2glb.cpp
